syntax = "proto3";

package com.asilitech.api;

option java_multiple_files = true;

message YourRequest {
  string message = 1;
}

message YourResponse {
  string response = 1;
}

service YoursService {
  // unary
  rpc GetYours(YourRequest) returns (YourResponse) {};
}
